--- a/index.html
+++ b/index.html
@@ -6,26 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+
+  <link rel="Icon" type="image/png" href="./logo.png"/>
+
+  <style>
+    :root {
+      --copycode-background: #384757;
+      --copycode-color     : #fff;
+      --base-background-color: #020f1a;
+      --sidebar-background: #131C26;
+      --sidebar-width: 16rem;
+      --sidebar-toggle-background: #384757;
+    }
+  </style>
 </head>
 <body>
-  <nav>
-    <a href="#/">EN</a>
-    <a href="#/es/intro">ES</a>
-  </nav>
-  <div id="app"></div>
+<nav>
+  <a href="#/">EN</a>
+  <a href="#/es/">中文</a>
+</nav>
+  <div id="app">Loading documentation...</div>
   <script>
     window.$docsify = {
+      el: '#app',
+      homepage: 'intro.md',
       loadSidebar: true,
-      subMaxLevel: 3,
-      alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
+      notFoundPage: {
+        '/': '_404.md',
+        '/es': 'es/_404.md',
       },
+      ga: 'G-32HZLF14HJ',
+      fallbackLanguages: ['es'],
+      relativePath: true,
+      maxLevel: 8,
+      subMaxLevel: 3,
+      themeColor: '#005ba6',
       name: 'Atlas Framework Docs',
-      repo: 'https://github.com/AtlasFw/atlasfw.github.io'
+      repo: 'AtlasFw/atlasfw.github.io',
+      routerMode: 'history',
+      search: {
+        maxAge: 86400000,
+        paths: 'auto',
+        '/es/': 'Escribe para buscar...',
+        '/': 'Type to search...',
+        noData: {
+          '/es/': 'No se encontraron resultados...',
+          '/': 'Could not find results...',
+        },
+        depth: 6,
+      },
+      copyCode: {
+        buttonText : 'Copy to clipboard',
+        errorText  : 'Error copying!',
+        successText: 'Copied to clipboard!',
+      }
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
 </body>
 </html>
