feat(core): added events/functions/properties

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   </style>
 </head>
 <body>
-  <div id="app">Loading documentation...</div>
+  <div id="app">Page does not exist...</div>
   <script>
+    this.localStorage.clear()
     window.$docsify = {
       el: '#app',
       homepage: 'intro.md',
