--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <title>Atlas Framework Docs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
-
   <link rel="Icon" type="image/png" href="./logo.png"/>
-
   <style>
     :root {
       --copycode-background: #384757;
@@ -19,6 +17,23 @@
       --sidebar-width: 16rem;
       --sidebar-toggle-background: #384757;
     }
+
+    ::-webkit-scrollbar {
+      width: 0.8vh;
+    }
+
+    ::-webkit-scrollbar-track {
+      border-radius: 0px;
+      background-color: #0a253b;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #005ba6;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #0e6fbe;
+    }
   </style>
 </head>
 <body>
@@ -27,7 +42,7 @@
     this.localStorage.clear()
     window.$docsify = {
       el: '#app',
-      homepage: 'intro.md',
+      homepage: '/intro.md',
       loadSidebar: true,
       notFoundPage: {
         '/': '_404.md',
@@ -35,12 +50,14 @@
       },
       fallbackLanguages: ['es'],
       relativePath: true,
+      auto2top: true,
+      autoHeader: true,
       maxLevel: 8,
       subMaxLevel: 2,
       themeColor: '#005ba6',
       name: 'Atlas Framework Docs',
       repo: 'AtlasFw/atlasfw.github.io',
-      routerMode: 'history',
+      // routerMode: 'history', // Comment this line out when adding more documentation
       search: {
         maxAge: 86400000,
         paths: 'auto',
@@ -56,6 +73,10 @@
         buttonText : 'Copy to clipboard',
         errorText  : 'Error copying!',
         successText: 'Copied to clipboard!',
+      },
+      themeable: {
+        readyTransition: true,
+        responsiveTables: true
       }
     }
   </script>
