forgot to restore history mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Atlas Framework Docs</title>
@@ -7,11 +8,11 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
-  <link rel="Icon" type="image/png" href="./logo.png"/>
+  <link rel="Icon" type="image/png" href="./logo.png" />
   <style>
     :root {
       --copycode-background: #384757;
-      --copycode-color     : #fff;
+      --copycode-color: #fff;
       --base-background-color: #020f1a;
       --sidebar-background: #131C26;
       --sidebar-width: 16rem;
@@ -36,6 +37,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="app">Page does not exist...</div>
   <script>
@@ -57,7 +59,7 @@
       themeColor: '#005ba6',
       name: 'Atlas Framework Docs',
       repo: 'AtlasFw/atlasfw.github.io',
-      // routerMode: 'history', // Comment this line out when adding more documentation
+      routerMode: 'history', // Comment this line out when adding more documentation
       search: {
         maxAge: 86400000,
         paths: 'auto',
@@ -70,8 +72,8 @@
         depth: 6,
       },
       copyCode: {
-        buttonText : 'Copy to clipboard',
-        errorText  : 'Error copying!',
+        buttonText: 'Copy to clipboard',
+        errorText: 'Error copying!',
         successText: 'Copied to clipboard!',
       },
       themeable: {
@@ -88,4 +90,5 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-lua.min.js"></script>
 </body>
+
 </html>
