--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script>
     this.localStorage.clear()
     window.$docsify = {
+      homepage: '/intro.md',
       themeColor: '#005ba6',
       name: 'Atlas Framework Docs',
       repo: 'AtlasFw/atlasfw.github.io',
@@ -53,7 +54,7 @@
       autoHeader: true,
       maxLevel: 8,
       subMaxLevel: 2,
-      routerMode: 'history', // Comment this line out when adding more documentation
+      routerMode: 'router', // Comment this line out when adding more documentation
       search: {
         maxAge: 86400000,
         paths: 'auto',
