(Add) : French language

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       themeColor: '#005ba6',
       name: 'Atlas Framework Docs',
       repo: 'AtlasFw/atlasfw.github.io',
-      fallbackLanguages: ['es'],
+      fallbackLanguages: ['en'],
       loadSidebar: true,
       relativePath: true,
       auto2top: true,
@@ -60,8 +60,10 @@
         paths: 'auto',
         '/es/': 'Escribe para buscar...',
         '/': 'Type to search...',
+        '/fr/': 'Tapez pour rechercher...',
         noData: {
           '/es/': 'No se encontraron resultados...',
+          '/fr/': 'Aucun résultat n\'a pu être trouvé...',
           '/': 'Could not find results...',
         },
         depth: 6,
