Changes with the new structure

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         maxAge: 86400000,
         paths: 'auto',
         '/es/': 'Escribe para buscar...',
-        '/': 'Type to search...',
+        '/en/': 'Type to search...',
         '/fr/': 'Tapez pour rechercher...',
         noData: {
           '/es/': 'No se encontraron resultados...',
           '/fr/': 'Aucun résultat n\'a pu être trouvé...',
-          '/': 'Could not find results...',
+          '/en/': 'Could not find results...',
         },
         depth: 6,
       },
