Added french & es when we copy a code on the docs

--- a/index.html
+++ b/index.html
@@ -74,9 +74,21 @@
         '/es': 'es/_404.md',
       },
       copyCode: {
-        buttonText: 'Copy to clipboard',
-        errorText: 'Error copying!',
-        successText: 'Copied to clipboard!',
+        buttonText: {
+          '/en/': 'Copy to clipboard',
+          '/fr/': 'Copier dans le presse-papiers',
+          '/es/': 'Copiar al portapapeles',
+        },
+        errorText: {
+          '/en/': 'Error copying!',
+          '/fr/': 'Une erreur est survenue lors de la copie',
+          '/es/': '¡Error al copiar!',
+        },
+        successText: {
+          '/en/': 'Copied to clipboard!',
+          '/fr/': 'Copié dans le presse-papiers !',
+          '/es/': 'Copiado en el portapapeles.',
+        },
       },
       themeable: {
         readyTransition: true,
