Fixed the search bar who wasn't working for other languages

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
       search: {
         maxAge: 86400000,
         paths: 'auto',
-        '/es/': 'Escribe para buscar...',
-        '/en/': 'Type to search...',
-        '/fr/': 'Tapez pour rechercher...',
+        placeholder: {
+          '/es/': 'Escribe para buscar...',
+          '/en/': 'Type to search...',
+          '/fr/': 'Tapez pour rechercher...',
+        },
         noData: {
           '/es/': 'No se encontraron resultados...',
           '/fr/': 'Aucun résultat n\'a pu être trouvé...',
