--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       autoHeader: true,
       maxLevel: 8,
       subMaxLevel: 2,
-      routerMode: 'router', // Comment this line out when adding more documentation
+      routerMode: 'history', // Comment this line out when adding more documentation
       search: {
         maxAge: 86400000,
         paths: 'auto',
